// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control component should be fullwidth, loading and size = large 1`] = `
<div
  className="control is-expanded is-loading is-large"
>
  <p>
    Default
  </p>
</div>
`;

exports[`Control component should concat classname in props with Bulma classname 1`] = `
<div
  className="control other-class this-is-a-test"
>
  <p>
    Default
  </p>
</div>
`;

exports[`Control component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
    "fullwidth": false,
    "iconLeft": false,
    "iconRight": false,
    "loading": false,
  },
  "render": [Function],
}
`;

exports[`Control component should have control classname 1`] = `
<div
  className="control"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;

exports[`Control component should render as a html section element 1`] = `
<section
  className="control"
>
  <p>
    Default
  </p>
</section>
`;

exports[`Control component should use inline styles 1`] = `
<div
  className="control"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;
